# nginx-ansible

./: .gitignore  .yamllint  CLAUDE.md  README.md  ansible.cfg  pyproject.toml  requirements.txt  site.yaml
.github/workflows/: lint.yaml
roles/nginx/defaults/: main.yaml
roles/nginx/tasks/: deploy.yaml  main.yaml  prep.yaml  undeploy.yaml
roles/nginx/templates/: configmap.yaml.j2  deployment.yaml.j2  ingress.yaml.j2  namespace.yaml.j2  role.yaml.j2  rolebinding-default-sa.yaml.j2  service.yaml.j2  serviceaccount.yaml.j2
roles/nginx/vars/: main.yaml
